--- a/移动端+罗迎元+2019211529/level1/style.css
+++ b/移动端+罗迎元+2019211529/level1/style.css
@@ -3,8 +3,17 @@
 }
 
 * {
-    padding: none;
+    padding: 0;
     border: none;
+    margin: 0;
+}
+
+body {
+    font-family: "Menlo";
+}
+
+.icon {
+    max-height: 1rem;
 }
 
 .head {
@@ -12,12 +21,51 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-size: .8rem;
+    font-size: 0.8rem;
     color: white;
     height: 2.5em;
-    padding: 0 .6em;
+    padding: 0 0.6em;
 }
 
-.icon {
-    max-height: 1rem;
+.select {
+    border-bottom: 1px solid #e7f0ff;
+    height: 2.5em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.date {
+    margin: 0 1.5em;
+}
+
+.content {
+    list-style: none;
+    color: #307cfb;
+    display: flex;
+    flex-direction: column;
+}
+
+.content > * {
+    margin: 0.7em 2em;
+    font-size: 0.7rem;
+    /* background-color: black; */
+}
+.content li {
+    display: flex;
+    align-items: flex-start;
+}
+.content li p:first-child {
+    width: 4em;
+    background-color: aqua;
+}
+
+.content li p:last-child {
+    margin-left: 2em;
+    border-left: 1px solid #d9d9d9;
+    padding-left: 0.7em;
+}
+
+.up {
+    position: relative;
 }
