--- a/移动端+罗迎元+2019211529/level1/style.css
+++ b/移动端+罗迎元+2019211529/level1/style.css
@@ -1,5 +1,13 @@
 :root {
-    font-size: 1.5em;
+    box-sizing: border-box;
+    font-size: calc(1em + 2vw);
+    --main-color: #307cfb;
+}
+
+*,
+::before,
+::after {
+    box-sizing: inherit;
 }
 
 * {
@@ -8,16 +16,12 @@
     margin: 0;
 }
 
-body {
-    font-family: "Menlo";
-}
-
 .icon {
     max-height: 1rem;
 }
 
 .head {
-    background-color: #307cfb;
+    background-color: var(--main-color);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -41,13 +45,13 @@ body {
 
 .content {
     list-style: none;
-    color: #307cfb;
+    color: var(--main-color);
     display: flex;
     flex-direction: column;
 }
 
 .content > * {
-    margin: 0.7em 2em;
+    margin: 0.7em 1.5em;
     font-size: 0.7rem;
     /* background-color: black; */
 }
@@ -55,13 +59,15 @@ body {
     display: flex;
     align-items: flex-start;
 }
+
 .content li p:first-child {
-    width: 4em;
-    background-color: aqua;
+    flex-shrink: 0;
+    /* background-color: aqua; */
+    width: 3.5em;
 }
 
 .content li p:last-child {
-    margin-left: 2em;
+    margin-left: 1.5em;
     border-left: 1px solid #d9d9d9;
     padding-left: 0.7em;
 }
