--- a/移动端+罗迎元+2019211529/level1/style.css
+++ b/移动端+罗迎元+2019211529/level1/style.css
@@ -22,18 +22,23 @@
 
 .head {
     background-color: var(--main-color);
+    position: fixed;
+    top: 0;
+    left: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
     font-size: 0.8rem;
     color: white;
+    width: 100%;
     height: 2.5em;
     padding: 0 0.6em;
 }
 
 .select {
     border-bottom: 1px solid #e7f0ff;
-    height: 2.5em;
+    height: 2em;
+    margin-top: 2em;
     display: flex;
     justify-content: center;
     align-items: center;
