--- a/JS复习及补充v1/level4/style/index-style.css
+++ b/JS复习及补充v1/level4/style/index-style.css
@@ -129,7 +129,7 @@ body {
     text-align: center;
 }
 
-.air-quality {
+.now-air-quality {
     display: flex;
     align-items: center;
     position: absolute;
@@ -179,7 +179,7 @@ body {
 }
 
 .daily-sunset,
-.daily-menu{
+.daily-menu {
     width: 50%;
     padding: 0.3rem 0.5rem 0.2rem;
     border-bottom: 1px solid #4f88bf;
