--- a/JS复习及补充/level4/style/index-stayle.css
+++ b/JS复习及补充/level4/style/index-stayle.css
@@ -67,6 +67,8 @@ body {
 /* 当前度数 */
 .now-temp {
     font-size: 6rem;
+    text-align: center;
+    width: 65%;
 }
 
 .city-weather span:nth-child(3) {
