--- a/JS复习及补充/level4/style/style.css
+++ b/JS复习及补充/level4/style/style.css
@@ -54,3 +54,12 @@ a:active {
 .icon-green img {
     background-color: #8fc31f;
 }
+
+.air-quality {
+    display: inline-block;
+    width: 2.5rem;
+    text-align: center;
+    border-radius: 1rem;
+    background-color: #8fc31f;
+    margin-left: 0.5rem;
+}
