--- a/JS复习及补充/level4/style/index-stayle.css
+++ b/JS复习及补充/level4/style/index-stayle.css
@@ -146,13 +146,13 @@ body {
     align-items: center;
 }
 
-.menu-select{
+.menu-select {
     padding-left: 0;
     padding-bottom: 0;
     display: none;
 }
 
-.menu-select > span{
+.menu-select > span {
     padding: 0 0.5rem;
 }
 
@@ -166,4 +166,28 @@ body {
     width: 100%;
     height: 6rem;
     padding: 0.2rem 0.5rem;
+}
+
+.tips {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    background-color: #4f88bf;
+    grid-gap: 1px;
+}
+
+.tips > li {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1.5rem 0;
+    background-color: #0d5aa5;
+}
+
+.tips > li:last-child {
+    background-color: #0d5aa5;
+    grid-column: 2 / 4;
+}
+
+.icon-tips {
+    max-width: 3rem;
 }
