--- a/JS复习及补充/level4/style/style.css
+++ b/JS复习及补充/level4/style/style.css
@@ -47,8 +47,8 @@ a:active {
     background-color: #fcc713;
 }
 
-.icon-blue img {
-    background-color: #51a6f2;
+.icon-orange img {
+    background-color: #f18d24;
 }
 
 .icon-green img {
